# C-dynamicArray

./: .gitignore  CMakeLists.txt  main.c  vectest.c  vector.c  vector.h
